--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<ul class="navbar-nav mr-auto justify-content-center">
 <!--             Journey-->
 			<li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" 
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 					data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					My Footsteps<span class="sr-only">(current)</span>
 				</a>
@@ -141,7 +141,7 @@
 			<div id="Self-Intro" class="col-lg-12"><strong><em>
 				I don't have a plan. After so many things led me to Hanoi, let me tell you so that you don't expect too much and be disappointed. Sometimes it's hard to understand the lessons that all adults want children to learn, for example, "Grow up!" or "Reason to work hard to earn money."
 				<br>
-				Strangely, the most rational people in this society keep pulling themselves into all sorts of strange things. One is all addictions, work addictions, movie addictions, food addictions, shopping addictions, coffee addictions, alcohol addictions, and billions of other stimulants. Second, there are depression and various physical and mental illnesses. Even though doctors, from general to psychologists, work their a$$ off, the queue at the hospital is still long. 
+				Strangely, the most rational people in this society keep pulling themselves into all sorts of strange things. One is all addictions, work addictions, movie addictions, food addictions, shopping addictions, coffee addictions, alcohol addictions, and billions of other stimulants. Second, there are depression and various physical and mental illnesses. Even though doctors, from general to psychologists, work their a$$ off, the queue at the hospital is still long.
 				<br>
 				In a way, I care a lot about education and the environment. Lately, I've been spending more time on my mental well-being after several episodes of illness while living alone in Hanoi. I often could comprehend some significant teachings from physical and psychological trauma. Sometimes when I am at rock bottom, my ego will come down to open a new lesson, so what's the point of living with a high ego?
 				<br>
@@ -483,7 +483,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe src="https://www.youtube.com/embed/XOo1ogi7dGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
+									<iframe src="https://youtu.be/u8FSoYSU_YE?si=GRvDvKy7RptSDP-y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -500,7 +500,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height="320px" src="https://www.youtube.com/embed/gkXaPZKsREQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://youtu.be/t5TX_zmJtu8?si=Rgi_7A7dFXD0tr6d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -517,7 +517,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height="320px" src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://youtu.be/SeYlNY0DkeQ?si=HcSt4sMGNea77e1M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
