--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe src="www.youtube.com/watch?v=u8FSoYSU_YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
+									<iframe src="https://www.youtube.com/watch?v=u8FSoYSU_YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
