--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe src="https://www.youtube.com/watch?v=u8FSoYSU_YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
+									<iframe src="https://www.youtube.com/embed/u8FSoYSU_YE?si=3MLQF4vQlNL3yBbX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -500,7 +500,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height="320px" src="https://www.youtube.com/watch?v=t5TX_zmJtu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://www.youtube.com/embed/t5TX_zmJtu8?si=5qoFktwRe3HClUGa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -517,7 +517,7 @@
 								</div>
 								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height="320px" src="https://www.youtube.com/watch?v=SeYlNY0DkeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://www.youtube.com/embed/gKx8YhJIXTw?si=Fm6eiM3pzU4nnEQ3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
